--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,29 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="smallvert"></div>
+      <div class="rect"></div>
+      <div class="circle"></div>
+    </header>
+    <section>
+      <div class="border">
+        <div class="shadowbox"></div>
+      </div>
+    </section>
+
+    <section>
+      <div class="hello">
+          <h1>Hello Friends</h1>
+      </div>
+    </section>
+  </body>
+</html>
